--- a/about.html
+++ b/about.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body>
+    <header></header>
     
+    <main></main>
+
+    <footer></footer>
     <!-- script -->
 </body>
 </html>
