--- a/index.html
+++ b/index.html
@@ -6,9 +6,393 @@
     <title>Home Page</title>
     <!-- tailwind link -->
     <link rel="stylesheet" href="src/output.css">
+    <!-- link flowbite -->
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <!-- font awesom -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <header class="sticky top-0 z-50">
+      <div class="bg-orange-100 backdrop-blur-sm pt-10">
+        <div class="container mx-auto px-3">
+          <div
+            class="bg-stone-100/50 backdrop-blur-sm shadow-md hover:shadow-lg transition-shadow duration-300 rounded-2xl px-4 py-1"
+          >
+            <div class="flex items-center justify-between">
+              <!-- Logo -->
+              <div class="flex items-center gap-3">
+                <img
+                  src="./logo/logo.png"
+                  alt="BreadOfLife-logo"
+                  class="h-16 w-16 object-contain"
+                />
+                <h1 class="text-2xl font-bold font-serif text-amber-900">
+                  BreadOfLife-Backery
+                </h1>
+              </div>
+
+              <!-- Search and Icons -->
+              <div class="flex items-center space-x-4">
+                <!-- Search Bar -->
+                <div class="relative">
+                  <input
+                    type="text"
+                    placeholder="Search"
+                    class="pl-13 pr-4 py-2 border border-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-900 bg-white/80 w-64 rounded-lg text-lg"
+                  />
+                  <svg
+                    class="w-5 h-5 absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                    ></path>
+                  </svg>
+                </div>
+
+                <!-- Cart Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    ></path>
+                  </svg>
+                </button>
+
+                <!-- User Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- navbar -->
+      <nav class="bg-orange-100">
+        <div class="container mx-auto px-6">
+          <ul class="flex items-center justify-center space-x-12 py-4">
+            <li>
+              <a
+                href="index.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="about.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >About us</a
+              >
+            </li>
+            <li class="relative group">
+              <button
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg flex items-center gap-1"
+              >
+                Menu
+                <svg
+                  class="w-4 h-4"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 9l-7 7-7-7"
+                  ></path>
+                </svg>
+              </button>
+              <!-- Dropdown Menu -->
+              <div
+                class="absolute top-full left-1/2 transform -translate-x-1/2 mt-2 w-48 bg-orange-100 shadow-lg border border-amber-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 rounded-sm"
+              >
+                <ul class="py-2">
+                  <li>
+                    <a
+                      href="#breads"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Breads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#cakes"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Cakes</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#drinks"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Drinks</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a
+                href="contact.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    </header>
+    <!-- main -->
+     <main>
+        <!-- banner -->
+        <div class="w-[1200px] h-[400px] bg-rose-200/50 m-auto flex justify-between text-center items-center rounded-xl mt-[100px]">
+            <img class="w-[400px]" src="./menu picture/coffee banner.png" alt="coffee banner">
+            <h1 class="text-[75px] text-amber-800 font-serif font-bold ">You're Welcome</h1>
+            <img class="w-[400px]" src="./menu picture/bread banner.png" alt="coffee banner">
+        </div>
+        <h1 class="text-[50px] text-amber-800 font-serif font-bold p-20 text-center">What do yo want to eat?</h1>
+        <!-- cart product -->
+        <!-- bread -->
+        <div class=" flex justify-between pl-[160px] pr-[160px] pb-[40px]"><h2 class="text-[35px] text-amber-800 font-serif font-bold">Breads</h2> <a class="text-[30px] text-amber-800 font-serif"  href="">See More</a></div>
+        <a href=""></a>
+        <div class="flex flex-wrap gap-15 justify-center">
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./bread section/white bread.png" alt="white bread">
+                <p class="text-[25px] font-serif text-amber-800">White Bread</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">0.50$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./bread section/whole wheat bread.png" alt="whole wheat bread">
+                <p class="text-[25px] font-serif text-amber-800">White Bread</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">0.50$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./bread section/classic butter croosaint.png" alt="classic butter croosaint">
+                <p class="text-[25px] font-serif text-amber-800">Butter Croosaint</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">1.50$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./bread section/multigrain bread.png" alt="multigrain bread">
+                <p class="text-[25px] font-serif text-amber-800">Mltigrain Bread</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">2.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+          </div>
+        <!-- Cakes -->
+         <div class=" flex justify-between pl-[160px] pr-[160px] pb-[40px] pt-[40px]"><h2 class="text-[35px] text-amber-800 font-serif font-bold">Cakes</h2> <a class="text-[30px] text-amber-800 font-serif"  href="">See More</a></div>
+        <div class="flex flex-wrap gap-15 justify-center">
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./cake section/pound cake.png" alt="pound cake">
+                <p class="text-[25px] font-serif text-amber-800">Pound Cake</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">5.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./cake section/red velvet cake.png" alt="red velvet cake">
+                <p class="text-[25px] font-serif text-amber-800">Red Velvet Cake</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">10.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./cake section/carrot cake.png" alt="carrot cake">
+                <p class="text-[25px] font-serif text-amber-800">Carrot Cake</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">15.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./cake section/vanilla cake.png" alt="vanilla cake">
+                <p class="text-[25px] font-serif text-amber-800">Vanilla Cake</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">20.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+          </div>
+        <!-- Drinks -->
+        <div class=" flex justify-between pl-[160px] pr-[160px] pb-[40px] pt-[40px] pt-[40px]"><h2 class="text-[35px] text-amber-800 font-serif font-bold">Drinks</h2> <a class="text-[30px] text-amber-800 font-serif"  href="">See More</a></div>
+        <div class="flex flex-wrap gap-15 justify-center">
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./drink section/espresso.png" alt="espresso">
+                <p class="text-[25px] font-serif text-amber-800">Espresso</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">2.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./drink section/americano.png" alt="americano">
+                <p class="text-[25px] font-serif text-amber-800">Americano</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">1.80$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./drink section/matcha latte.png" alt="matcha latte">
+                <p class="text-[25px] font-serif text-amber-800">Matcha Latte</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">2.00$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+             <div class="flex flex-wrap items-center justify-center w-[260px] h-[440px] bg-rose-200/50 rounded-xl">
+                <img class="w-[200px] h-[250px]" src="./drink section/latte.png" alt="latte">
+                <p class="text-[25px] font-serif text-amber-800">​Hot Latte</p>       
+                <div class="grid grid-cols-2 items-center justify-center">
+                    <p class="text-red-500 font-bold ">1.70$</p>
+                    <button class="bg-amber-100 rounded-3xl"><p class="pt-2 pb-2 pr-4 pl-4">Add to cart</p></button>
+              </div>
+              </div>
+          </div>
+     </main>
+     <!-- footer -->
+       <footer class="bg-rose-300/50 py-12 mt-16">
+      <div class="container mx-auto px-6">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <!-- Column 1 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Site Menu</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">Home</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">About</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">Menu</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 2 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Services</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Catering</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Custom Orders</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Delivery</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 3 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Support</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">FAQ</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">Terms</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 4 - Newsletter -->
+          <div>
+            <h3 class="text-white font-semibold mb-4 font-mono text-5xl">
+              Site Title
+            </h3>
+            <p class="text-gray-100 text-lg mb-4">
+              Subscribe to our newsletter
+            </p>
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="w-70 h-13 px-4 py-2 rounded-lg mb-2 focus:outline-none bg-amber-900 text-white"
+            />
+          </div>
+        </div>
+
+        <!-- Dark Mode Toggle -->
+        <div class="mt-8 flex">
+          <label class="relative inline-flex items-center cursor-pointer">
+            <input type="checkbox" class="sr-only peer" />
+            <div
+              class="w-11 h-6 bg-gray-800 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-red-800 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-red-800 after:border-red-800 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-gray-400"
+            ></div>
+          </label>
+        </div>
+      </div>
+    </footer>
     <!-- script -->
+     <script src="./js/script.js"></script>
 </body>
 </html>
