about page, update image and contact page

--- a/menu.html
+++ b/menu.html
@@ -206,7 +206,7 @@
           <div class="flex justify-between items-center mb-6">
             <h2 class="text-3xl font-serif text-amber-900">Breads</h2>
             <a
-              href="#"
+              href="breads.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-xl font-serif"
               >See More →</a
             >
@@ -328,14 +328,13 @@
           </div>
         </div>
       </section>
-
       <!-- Cakes Section -->
       <section id="cakes" class="mb-16">
         <div class="max-w-[1080px] mx-auto">
           <div class="flex justify-between items-center mb-6">
             <h2 class="text-3xl font-serif text-amber-900">Cakes</h2>
             <a
-              href="#"
+              href="cakes.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-xl font-serif"
               >See More →</a
             >
@@ -464,7 +463,7 @@
           <div class="flex justify-between items-center mb-6">
             <h2 class="text-3xl font-serif text-amber-900">Drinks</h2>
             <a
-              href="#"
+              href="drinks.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-xl font-serif"
               >See More →</a
             >
