--- a/about.html
+++ b/about.html
@@ -1,14 +1,343 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us - BreadOfLife Bakery</title>
     <!-- tailwind link -->
-    <link rel="stylesheet" href="src/output.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="src/output.css" />
+    <!-- flowbite link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <!-- font-awesome cdnjs link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="min-h-screen bg-orange-100">
+    <!-- Header -->
+    <header class="sticky top-0 z-50">
+      <div class="bg-orange-100 backdrop-blur-sm pt-10">
+        <div class="container mx-auto px-3">
+          <div
+            class="bg-stone-100/50 backdrop-blur-sm shadow-md hover:shadow-lg transition-shadow duration-300 rounded-2xl px-4 py-1"
+          >
+            <div class="flex items-center justify-between">
+              <!-- Logo -->
+              <div class="flex items-center gap-3">
+                <img
+                  src="images/BreadOfLife-logo.png"
+                  alt="BreadOfLife-logo"
+                  class="h-16 w-16 object-contain"
+                />
+                <h1 class="text-2xl font-bold font-serif text-amber-900">
+                  BreadOfLife-Backery
+                </h1>
+              </div>
+
+              <!-- Search and Icons -->
+              <div class="flex items-center space-x-4">
+                <!-- Search Bar -->
+                <div class="relative">
+                  <input
+                    type="text"
+                    placeholder="Search"
+                    class="pl-13 pr-4 py-2 border border-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-900 bg-white/80 w-64 rounded-lg text-lg"
+                  />
+                  <svg
+                    class="w-5 h-5 absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                    ></path>
+                  </svg>
+                </div>
+
+                <!-- Cart Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    ></path>
+                  </svg>
+                </button>
+
+                <!-- User Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- navbar -->
+      <nav class="bg-orange-100">
+        <div class="container mx-auto px-6">
+          <ul class="flex items-center justify-center space-x-12 py-4">
+            <li>
+              <a
+                href="index.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="about.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >About us</a
+              >
+            </li>
+            <li class="relative group">
+              <button
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg flex items-center gap-1"
+              >
+                Menu
+                <svg
+                  class="w-4 h-4"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 9l-7 7-7-7"
+                  ></path>
+                </svg>
+              </button>
+              <!-- Dropdown Menu -->
+              <div
+                class="absolute top-full left-1/2 transform -translate-x-1/2 mt-2 w-48 bg-orange-100 shadow-lg border border-amber-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 rounded-sm"
+              >
+                <ul class="py-2">
+                  <li>
+                    <a
+                      href="breads.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Breads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="cakes.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Cakes</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="drinks.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Drinks</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a
+                href="contact.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
+      <!-- Hero Image Section - Full Screen -->
+      <section class="relative h-screen w-full">
+        <div class="absolute inset-0">
+          <img
+            src="about-us-banner/bakery.png"
+            alt="Bakery Interior"
+            class="w-full h-full object-cover"
+          />
+          <div class="absolute inset-0 bg-black/30"></div>
+        </div>
+        <div class="relative h-full flex items-center justify-start px-12 md:px-24">
+          <div class="text-left text-white px-12 py-10 bg-black/40 max-w-4xl">
+            <h1 class="text-6xl md:text-8xl font-serif leading-tight">
+              Baked with love,<br />
+              served with a smile<br />
+              where every bite<br />
+              feels like home
+            </h1>
+          </div>
+        </div>
+      </section>
+
+      <div class="container mx-auto px-6 py-8">
+
+      <!-- Our Sweet Journey Section -->
+      <section class="mb-16">
+        <div class="max-w-4xl mx-auto">
+          <div class="p-12">
+            <h2 class="text-5xl font-serif text-amber-900 text-center mb-8">
+              Our Sweet<br />Journey
+            </h2>
+
+            <div class="space-y-6 text-amber-900">
+              <div class="bg-rose-300/30 rounded-2xl p-6">
+                <p class="text-xl leading-relaxed text-center font-serif">
+                  Bread of Life began, not just as a bakery, but as a vision—a place where every loaf tells a story, and every pastry carries a purpose. Born from a desire to nourish both body and soul, we pour love into every joy, and peace into every recipe. What started as a humble kitchen with the aroma of fresh bread and laughter has grown into a community gathering place where everyone feels welcome and part of our community.
+                </p>
+              </div>
+
+              <div class="bg-rose-300/30 rounded-2xl p-6">
+                <p class="text-xl leading-relaxed text-center font-serif">
+                  We believe that life, like baking, is a delicate balance of warmth, patience, and care. From sunrise sourdough to sunset cinnamon rolls, our creations are more than food—they're a testament to tradition, togetherness, and the simple beauty of connection. Whether you're sharing a croissant with a friend or savoring a quiet slice of cake, you're tasting the heart of what we do.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </section>
+        <div class="flex items-center justify-center mt-18">
+                <img src="about-us-banner/កួរស្រូវ 2.png" alt="wheat" class="w-30 h-30 object-contain" />
+                <div class=" bg-rose-300/30 rounded-2xl p-4 w-150 h-20">
+                    <p class="text-xl font-serif text-amber-900 mx-6 italic text-center">
+                        This is our journey. And we're so glad you're part of it.
+                    </p>
+                </div>
+                <img src="about-us-banner/កួរស្រូវ​ 1.png" alt="wheat" class="w-30 h-30 object-contain" />
+              </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-rose-300/50 py-12 mt-16">
+      <div class="container mx-auto px-6">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <!-- Column 1 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Site Menu</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="index.html" class="hover:text-amber-900 text-gray-100">Home</a>
+              </li>
+              <li>
+                <a href="about.html" class="hover:text-amber-900 text-gray-100">About</a>
+              </li>
+              <li>
+                <a href="menu.html" class="hover:text-amber-900 text-gray-100">Menu</a>
+              </li>
+              <li>
+                <a href="contact.html" class="hover:text-amber-900 text-gray-100"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 2 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Services</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Catering</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Custom Orders</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Delivery</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 3 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Support</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">FAQ</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">Terms</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 4 - Newsletter -->
+          <div>
+            <h3 class="text-white font-semibold mb-4 font-mono text-5xl">
+              Site Title
+            </h3>
+            <p class="text-gray-100 text-lg mb-4">
+              Subscribe to our newsletter
+            </p>
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="w-70 h-13 px-4 py-2 rounded-lg mb-2 focus:outline-none bg-amber-900 text-white"
+            />
+          </div>
+        </div>
+
+        <!-- Dark Mode Toggle -->
+        <div class="mt-8 flex">
+          <label class="relative inline-flex items-center cursor-pointer">
+            <input type="checkbox" class="sr-only peer" />
+            <div
+              class="w-11 h-6 bg-gray-800 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-red-800 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-red-800 after:border-red-800 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-gray-400"
+            ></div>
+          </label>
+        </div>
+      </div>
+    </footer>
     <!-- script -->
-</body>
+    <script src="js/script.js"></script>
+    <!-- flowbite script -->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+  </body>
 </html>
