--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,429 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us - BreadOfLife Bakery</title>
     <!-- tailwind link -->
-    <link rel="stylesheet" href="src/output.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="src/output.css" />
+    <!-- flowbite link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+    <!-- font-awesome cdnjs link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="min-h-screen bg-orange-100">
+    <!-- Header -->
+    <header class="sticky top-0 z-50">
+      <div class="bg-orange-100 backdrop-blur-sm pt-10">
+        <div class="container mx-auto px-3">
+          <div
+            class="bg-stone-100/50 backdrop-blur-sm shadow-md hover:shadow-lg transition-shadow duration-300 rounded-2xl px-4 py-1"
+          >
+            <div class="flex items-center justify-between">
+              <!-- Logo -->
+              <div class="flex items-center gap-3">
+                <img
+                  src="images/BreadOfLife-logo.png"
+                  alt="BreadOfLife-logo"
+                  class="h-16 w-16 object-contain"
+                />
+                <h1 class="text-2xl font-bold font-serif text-amber-900">
+                  BreadOfLife-Backery
+                </h1>
+              </div>
+
+              <!-- Search and Icons -->
+              <div class="flex items-center space-x-4">
+                <!-- Search Bar -->
+                <div class="relative">
+                  <input
+                    type="text"
+                    placeholder="Search"
+                    class="pl-13 pr-4 py-2 border border-amber-800 focus:outline-none focus:ring-2 focus:ring-amber-900 bg-white/80 w-64 rounded-lg text-lg"
+                  />
+                  <svg
+                    class="w-5 h-5 absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                    ></path>
+                  </svg>
+                </div>
+
+                <!-- Cart Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    ></path>
+                  </svg>
+                </button>
+
+                <!-- User Icon -->
+                <button class="text-amber-900 hover:text-red-700">
+                  <svg
+                    class="w-7 h-7"
+                    fill="none"
+                    stroke="currentColor"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                    ></path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- navbar -->
+      <nav class="bg-orange-100">
+        <div class="container mx-auto px-6">
+          <ul class="flex items-center justify-center space-x-12 py-4">
+            <li>
+              <a
+                href="index.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a
+                href="about.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >About us</a
+              >
+            </li>
+            <li class="relative group">
+              <button
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg flex items-center gap-1"
+              >
+                Menu
+                <svg
+                  class="w-4 h-4"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M19 9l-7 7-7-7"
+                  ></path>
+                </svg>
+              </button>
+              <!-- Dropdown Menu -->
+              <div
+                class="absolute top-full left-1/2 transform -translate-x-1/2 mt-2 w-48 bg-orange-100 shadow-lg border border-amber-200 opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 rounded-sm"
+              >
+                <ul class="py-2">
+                  <li>
+                    <a
+                      href="breads.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Breads</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="cakes.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Cakes</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="drinks.html"
+                      class="block px-4 py-2 text-amber-900 font-semibold hover:bg-rose-200 transition"
+                      >Drinks</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <a
+                href="contact.html"
+                class="text-amber-900 hover:text-red-700 transition font-semibold text-lg"
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main class="container mx-auto px-6 py-8">
+      <div class="max-w-6xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+          <!-- Left Side - Images -->
+          <div class="flex flex-col justify-center space-y-8">
+            <!-- Coffee Image -->
+            <div class="flex justify-center">
+              <img
+                src="images/coffee-banner-homepage.png"
+                alt="Coffee"
+                class="w-100 h-auto object-contain"
+              />
+            </div>
+            <!-- Croissant Image -->
+            <div class="flex justify-center">
+              <img
+                src="images/bread-banner-homepage.png"
+                alt="Croissant"
+                class="w-100 h-auto object-contain"
+              />
+            </div>
+          </div>
+
+          <!-- Right Side - Contact Form -->
+          <div class="bg-rose-200/40 rounded-3xl p-8">
+            <h1 class="text-4xl font-serif text-amber-900 mb-8 text-center">
+              Contact Us
+            </h1>
+
+            <form class="space-y-6">
+              <!-- Name Input -->
+              <div>
+                <input
+                  type="text"
+                  placeholder="Your name"
+                  class="w-full px-4 py-3 rounded-lg border-2 border-rose-300 focus:outline-none focus:border-amber-900 bg-white/80"
+                />
+              </div>
+
+              <!-- Email Input -->
+              <div>
+                <input
+                  type="email"
+                  placeholder="Your email"
+                  class="w-full px-4 py-3 rounded-lg border-2 border-rose-300 focus:outline-none focus:border-amber-900 bg-white/80"
+                />
+              </div>
+
+              <!-- Phone Input -->
+              <div>
+                <input
+                  type="tel"
+                  placeholder="Your phone (optional)"
+                  class="w-full px-4 py-3 rounded-lg border-2 border-rose-300 focus:outline-none focus:border-amber-900 bg-white/80"
+                />
+              </div>
+
+              <!-- Message Textarea -->
+              <div>
+                <textarea
+                  placeholder="Your message"
+                  rows="5"
+                  class="w-full px-4 py-3 rounded-lg border-2 border-rose-300 focus:outline-none focus:border-amber-900 bg-white/80 resize-none"
+                ></textarea>
+              </div>
+
+              <!-- Submit Button -->
+              <div>
+                <button
+                  type="submit"
+                  class="w-full bg-amber-900 hover:bg-amber-800 text-white font-semibold py-3 rounded-lg transition duration-300"
+                >
+                  SEND MESSAGE
+                </button>
+              </div>
+            </form>
+
+            <!-- Contact Information -->
+            <div class="mt-8 space-y-3 text-amber-900">
+              <div class="flex items-center justify-center gap-2">
+                <svg
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  ></path>
+                </svg>
+                <span class="text-lg">096 77 777</span>
+              </div>
+              <div class="flex items-center justify-center gap-2">
+                <svg
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  ></path>
+                </svg>
+                <span class="text-lg">bakery@gmail.com</span>
+              </div>
+              <div class="flex items-center justify-center gap-2">
+                <svg
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"
+                  ></path>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
+                  ></path>
+                </svg>
+                <span class="text-lg">phnom penh, mronchey, st 264</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-rose-300/50 py-12 mt-16">
+      <div class="container mx-auto px-6">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+          <!-- Column 1 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Site Menu</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="index.html" class="hover:text-amber-900 text-gray-100"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a href="about.html" class="hover:text-amber-900 text-gray-100"
+                  >About</a
+                >
+              </li>
+              <li>
+                <a href="menu.html" class="hover:text-amber-900 text-gray-100"
+                  >Menu</a
+                >
+              </li>
+              <li>
+                <a
+                  href="contact.html"
+                  class="hover:text-amber-900 text-gray-100"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 2 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Services</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Catering</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Custom Orders</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Delivery</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 3 -->
+          <div>
+            <h3 class="text-white font-bold mb-4">Support</h3>
+            <ul class="space-y-2 text-amber-800">
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">FAQ</a>
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100"
+                  >Privacy Policy</a
+                >
+              </li>
+              <li>
+                <a href="#" class="hover:text-amber-900 text-gray-100">Terms</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Column 4 - Newsletter -->
+          <div>
+            <h3 class="text-white font-semibold mb-4 font-mono text-5xl">
+              Site Title
+            </h3>
+            <p class="text-gray-100 text-lg mb-4">
+              Subscribe to our newsletter
+            </p>
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="w-70 h-13 px-4 py-2 rounded-lg mb-2 focus:outline-none bg-amber-900 text-white"
+            />
+          </div>
+        </div>
+
+        <!-- Dark Mode Toggle -->
+        <div class="mt-8 flex">
+          <label class="relative inline-flex items-center cursor-pointer">
+            <input type="checkbox" class="sr-only peer" />
+            <div
+              class="w-11 h-6 bg-gray-800 peer-focus:outline-none rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-red-800 after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-red-800 after:border-red-800 after:border after:rounded-full after:h-5 after:w-5 after:transition-all peer-checked:bg-gray-400"
+            ></div>
+          </label>
+        </div>
+      </div>
+    </footer>
     <!-- script -->
-</body>
+    <script src="js/script.js"></script>
+    <!-- flowbite script -->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+  </body>
 </html>
