--- a/cakes.html
+++ b/cakes.html
@@ -25,7 +25,7 @@
     <div class="container mx-auto px-6 pt-8">
       <a
         href="menu.html"
-        class="inline-flex items-center text-amber-900 hover:text-red-700 font-semibold text-lg transition"
+        class="inline-flex items-center text-amber-900 hover:text-red-700 font-semibold text-2xl transition font-serif"
       >
         <svg
           class="w-5 h-5 mr-2"
@@ -47,10 +47,10 @@
     <!-- main -->
     <main class="container mx-auto px-6 py-5">
       <!-- Hero Section -->
-      <div class="max-w-7xl mx-auto flex items-center justify-between mb-12">
+      <div class="max-w-7xl mx-auto flex items-center justify-center gap-40 mb-12">
         <div>
           <h1
-            class="text-7xl md:text-7xl font-serif text-amber-900 leading-tight"
+            class="text-7xl md:text-8xl font-serif text-amber-900 leading-tight"
           >
             Sweetness<br />worth sharing
           </h1>
@@ -59,7 +59,7 @@
           <img
             src="images/cake-cake-scecton.png"
             alt="Cake Products"
-            class="w-full max-w-3xl h-auto object-contain"
+            class="w-100 max-w-3xl h-auto object-contain"
           />
         </div>
       </div>
