--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,8 @@
                 </div>
 
                 <!-- Cart Icon -->
-                <button class="text-amber-900 hover:text-red-700">
+                <!-- Cart Icon -->
+                <button id="cart-btn" class="text-amber-900 hover:text-red-700">
                   <svg
                     class="w-7 h-7"
                     fill="none"
@@ -83,7 +84,7 @@
                 </button>
 
                 <!-- User Icon -->
-                <button class="text-amber-900 hover:text-red-700">
+                <button id="user-btn" class="text-amber-900 hover:text-red-700">
                   <svg
                     class="w-7 h-7"
                     fill="none"
