--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,9 @@
                   alt="BreadOfLife-logo"
                   class="h-16 w-16 object-contain"
                 />
-                <h1 class="text-xl md:text-2xl font-bold font-serif text-amber-900">
+                <h1
+                  class="text-xl md:text-2xl font-bold font-serif text-amber-900"
+                >
                   BreadOfLife-Backery
                 </h1>
               </div>
@@ -72,9 +74,10 @@
                 </div>
 
                 <!-- Cart Icon -->
-                <a href="menu.html" class="text-amber-900 hover:text-red-700 transition">
+                <!-- Cart Icon -->
+                <button id="cart-btn" class="text-amber-900 hover:text-red-700">
                   <svg
-                    class="w-6 h-6 md:w-7 md:h-7"
+                    class="w-7 h-7"
                     fill="none"
                     stroke="currentColor"
                     viewBox="0 0 24 24"
@@ -86,12 +89,12 @@
                       d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     ></path>
                   </svg>
-                </a>
+                </button>
 
                 <!-- User Icon -->
-                <a href="contact.html" class="text-amber-900 hover:text-red-700 transition">
+                <button id="user-btn" class="text-amber-900 hover:text-red-700">
                   <svg
-                    class="w-6 h-6 md:w-7 md:h-7"
+                    class="w-7 h-7"
                     fill="none"
                     stroke="currentColor"
                     viewBox="0 0 24 24"
@@ -103,7 +106,7 @@
                       d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
                     ></path>
                   </svg>
-                </a>
+                </button>
               </div>
             </div>
           </div>
@@ -112,7 +115,9 @@
       <!-- navbar -->
       <nav class="bg-orange-100">
         <div class="container mx-auto px-6">
-          <ul class="flex items-center justify-center space-x-6 md:space-x-12 py-4">
+          <ul
+            class="flex items-center justify-center space-x-6 md:space-x-12 py-4"
+          >
             <li>
               <a
                 href="index.html"
@@ -191,7 +196,9 @@
     <!-- Main Content -->
     <main class="container mx-auto px-4 md:px-6 py-5">
       <!-- Hero Section -->
-      <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-8 mb-12">
+      <div
+        class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-8 mb-12"
+      >
         <div>
           <h1
             class="text-5xl md:text-7xl font-serif text-amber-900 leading-tight"
@@ -211,7 +218,9 @@
       <section id="breads" class="mb-16">
         <div class="max-w-[1300px] mx-auto">
           <div class="flex justify-between items-center mb-6">
-            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">Breads</h2>
+            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">
+              Breads
+            </h2>
             <a
               href="breads.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-lg md:text-xl font-serif"
@@ -219,7 +228,9 @@
             >
           </div>
           <div class="flex justify-center">
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10">
+            <div
+              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10"
+            >
               <!-- White Bread -->
               <div
                 class="bg-rose-200/50 rounded-2xl p-4 shadow-md hover:shadow-xl transition w-full max-w-[260px] mx-auto"
@@ -339,7 +350,9 @@
       <section id="cakes" class="mb-16">
         <div class="max-w-[1300px] mx-auto">
           <div class="flex justify-between items-center mb-6">
-            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">Cakes</h2>
+            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">
+              Cakes
+            </h2>
             <a
               href="cakes.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-lg md:text-xl font-serif"
@@ -347,7 +360,9 @@
             >
           </div>
           <div class="flex justify-center">
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10">
+            <div
+              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10"
+            >
               <!-- Pound Cake -->
               <div
                 class="bg-rose-200/50 rounded-2xl p-4 shadow-md hover:shadow-xl transition w-full max-w-[260px] mx-auto"
@@ -468,7 +483,9 @@
       <section id="drinks" class="mb-16">
         <div class="max-w-[1300px] mx-auto">
           <div class="flex justify-between items-center mb-6">
-            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">Drinks</h2>
+            <h2 class="text-2xl md:text-3xl font-serif text-amber-900">
+              Drinks
+            </h2>
             <a
               href="drinks.html"
               class="text-amber-900 hover:text-amber-700 font-medium text-lg md:text-xl font-serif"
@@ -476,7 +493,9 @@
             >
           </div>
           <div class="flex justify-center">
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10">
+            <div
+              class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 md:gap-10"
+            >
               <!-- Espresso -->
               <div
                 class="bg-rose-200/50 rounded-2xl p-4 shadow-md hover:shadow-xl transition w-full max-w-[260px] mx-auto"
@@ -601,16 +620,24 @@
             <h3 class="text-white font-bold mb-4">Site Menu</h3>
             <ul class="space-y-2 text-amber-800">
               <li>
-                <a href="index.html" class="hover:text-amber-900 text-gray-100">Home</a>
+                <a href="index.html" class="hover:text-amber-900 text-gray-100"
+                  >Home</a
+                >
               </li>
               <li>
-                <a href="about.html" class="hover:text-amber-900 text-gray-100">About</a>
+                <a href="about.html" class="hover:text-amber-900 text-gray-100"
+                  >About</a
+                >
               </li>
               <li>
-                <a href="menu.html" class="hover:text-amber-900 text-gray-100">Menu</a>
+                <a href="menu.html" class="hover:text-amber-900 text-gray-100"
+                  >Menu</a
+                >
               </li>
               <li>
-                <a href="contact.html" class="hover:text-amber-900 text-gray-100"
+                <a
+                  href="contact.html"
+                  class="hover:text-amber-900 text-gray-100"
                   >Contact</a
                 >
               </li>
@@ -659,7 +686,9 @@
 
           <!-- Column 4 - Newsletter -->
           <div>
-            <h3 class="text-white font-semibold mb-4 font-mono text-3xl md:text-5xl">
+            <h3
+              class="text-white font-semibold mb-4 font-mono text-3xl md:text-5xl"
+            >
               Site Title
             </h3>
             <p class="text-gray-100 text-lg mb-4">
